--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1034</width>
-    <height>682</height>
+    <height>697</height>
    </rect>
   </property>
   <property name="mouseTracking">
@@ -1037,7 +1037,10 @@ border-radius: 4px;
        </layout>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="Middle_horzLayout">
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <property name="sizeConstraint">
+         <enum>QLayout::SetMinimumSize</enum>
+        </property>
         <item>
          <widget class="QScrollArea" name="scrollArea">
           <property name="widgetResizable">
@@ -1049,28 +1052,34 @@ border-radius: 4px;
              <x>0</x>
              <y>0</y>
              <width>328</width>
-             <height>471</height>
+             <height>486</height>
             </rect>
+           </property>
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
            </property>
            <widget class="QWidgetCanvas" name="Canvas" native="true">
             <property name="geometry">
              <rect>
-              <x>60</x>
-              <y>50</y>
-              <width>120</width>
-              <height>80</height>
+              <x>10</x>
+              <y>10</y>
+              <width>158</width>
+              <height>78</height>
              </rect>
             </property>
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="maximumSize">
              <size>
-              <width>500</width>
-              <height>500</height>
+              <width>300</width>
+              <height>300</height>
              </size>
             </property>
            </widget>
@@ -1097,10 +1106,74 @@ border-radius: 4px;
           <height>16777215</height>
          </size>
         </property>
-        <layout class="QVBoxLayout" name="Right_horzLayout" stretch="0,0">
+        <layout class="QVBoxLayout" name="Right_horzLayout" stretch="0,0,0">
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
+         <item>
+          <layout class="QHBoxLayout" name="scaleLayout">
+           <property name="spacing">
+            <number>6</number>
+           </property>
+           <item>
+            <widget class="QPushButton" name="canvas_GrowButton">
+             <property name="minimumSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>+</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="canvas_ShrinkButton">
+             <property name="minimumSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="sizeIncrement">
+              <size>
+               <width>0</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string>-</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
          <item>
           <widget class="QScrollArea" name="scrollArea_2">
            <property name="sizePolicy">
@@ -1456,7 +1529,7 @@ border-radius: 4px;
   <customwidget>
    <class>QWidgetCanvas</class>
    <extends>QWidget</extends>
-   <header location="global">Widgets/qwidgetcanvas.h</header>
+   <header>Widgets/qwidgetcanvas.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
